# congpu

./: .clang-format  .clang-tidy  .codespellrc  .gitmodules  BUILDING.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  HACKING.md  LICENSE.md  README.md  about.html  about_8dox.html  annotated.html  classprint__buffer_1_1PrintBuffer.html  classslang__compiler_1_1Compiler.html  classstd140_1_1Encoder.html  classstd140_1_1Encoder_1_1StructScope.html  classtensor__buffer_1_1TensorBuffer.html  conanfile.py  dir_20031c8ac7b5b81a99e1c972bb3e86c4.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_95549db56c73f37cb2fd24b47a6c7b09.html  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.html  dir_ef3b2545113449f8f25e623a543d64e3.html  files.html  gpu-printing-ops_8h.html  gpu-printing_8cpp.html  gpu-printing_8h.html  index.html  lib_8cpp.html  lib_8hpp.html  logging__macros_8h.html  main_8cpp.html  md_BUILDING.html  md_CODE__OF__CONDUCT.html  md_CONTRIBUTING.html  md_HACKING.html  md_LICENSE.html  modules.html  (+39 more)
.github/scripts/: conan-ci-setup.sh
.github/workflows/: ci.yml
cmake/: conan.cmake  copy-runtime-libs.cmake  dev-mode.cmake  ensure-conan.cmake  install-rules.cmake  spell.cmake  variables.cmake
docs/: Doxyfile.in
source/: lib.cpp  lib.hpp  logging_macros.h  main.cpp  print_buffer.cpp  print_buffer.hpp  print_reflection.cpp  print_reflection.hpp  result.h  slang_compiler.cpp  slang_compiler.hpp  std140.hpp  tensor_buffer.cpp  tensor_buffer.hpp  tensor_reflection.cpp  tensor_reflection.hpp
source/shaders/: f.slang  gpu-printing.cpp  hello_world.slang  matmul.slang  printing.slang  single-buffer.slang  tensor.slang
source/shaders/tools/: gpu-printing.cpp  printing.slang
test/: CMakeLists.txt
test/source/: congpu_test.cpp  lib_test.cpp  print_buffer_test.cpp  print_reflection_test.cpp  slang_test.cpp  tensor_buffer_test.cpp  tensor_reflection_test.cpp
test/source/shaders/: single-buffer.slang  tensor-buffer.slang
